fix(sbb-calendar): fix wrong width when orientation changes in iOS (#2044)
Due to a Safari iOS rendering bug we need to define min-width as well.
Otherwise, after orientation change, there is a wrong width if placed in an sbb-dialog.

--- a/src/components/sbb-calendar/sbb-calendar.scss
+++ b/src/components/sbb-calendar/sbb-calendar.scss
@@ -162,6 +162,12 @@
       duration: var(--sbb-calendar-table-animation-duration);
     }
   }
+
+  :host(:not([data-wide])) & {
+    // Due to a Safari iOS rendering bug we need to define min-width as well.
+    // Otherwise, after orientation change, there is a wrong width if placed in an sbb-dialog.
+    min-width: 100%;
+  }
 }
 
 .sbb-calendar__table-header {
